# libbech32

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README-hackathon2018.md  README.md
anyoption/: anyoption.cpp  anyoption.h
cmake/: FindBitcoinApiCpp.cmake  FindJSONCPP.cmake
data/btcrDids/: README.md  foobar.did.txt
examples/: CMakeLists.txt  c_example.c  c_other_examples.c  c_usage_decoding_example.c  c_usage_encoding_example.c  c_usage_example.c  cpp_example.cpp  cpp_other_examples.cpp  cpp_usage_decoding_example.cpp  cpp_usage_encoding_example.cpp  cpp_usage_example.cpp
include/libbech32/: bech32.h  libbech32.h
include/libtxref/: libtxref.h  txrefCodec.h
integration/: CMakeLists.txt  itest_chainSoQuery.cpp
libbech32/: CMakeLists.txt  bech32.cpp  bech32.h
libtxref/: CMakeLists.txt  txref.cpp  txref.h  txrefCodec.cpp
src/: BitcoinRPCFacade.cpp  BitcoinRPCFacade.h  CMakeLists.txt  ChainQuery.h  ChainSoQuery.cpp  ChainSoQuery.h  CurlWrapper.cpp  bitcoinRPCFacade.cpp  bitcoinRPCFacade.h  chainQuery.cpp  chainQuery.h  chainSoQuery.cpp  chainSoQuery.h  classifyInputString.cpp  classifyInputString.h  createBtcrDid.cpp  curlWrapper.cpp  curlWrapper.h  didResolver.cpp  didVerifier.cpp  encodeOpReturnData.cpp  encodeOpReturnData.h  satoshis.h  t2tSupport.cpp  t2tSupport.h  txid2txref.cpp  txid2txref.h
src/domain/: blockHeight.cpp  blockHeight.h  did.cpp  did.h  transactionPosition.cpp  transactionPosition.h  txid.cpp  txid.h  txref.cpp  txref.h  vout.cpp  vout.h
test/: CMakeLists.txt  jsonTestData.h  mock_bitcoinRPCFacade.cpp  mock_bitcoinRPCFacade.h  test_ChainSoQuery.cpp  test_ChainSoQuery.h  test_chainSoQuery.cpp  test_classifyInputString.cpp  test_encodeOpReturnData.cpp  test_encodeOpReturnData.h  test_satoshis.cpp  test_satoshis.h  test_t2tSupport.cpp
test/googletest/: CMakeLists.txt
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googletest/: CMakeLists.txt
test/testbech32/: CMakeLists.txt  bech32_api_tests.cpp  bech32_c_api_tests.c  test_Bech32.cpp  test_Bech32.h
test/testdomain/: CMakeLists.txt  main.cpp  test_BlockHeight.cpp  test_Did.cpp  test_TransactionPosition.cpp  test_Txid.cpp  test_Txref.cpp  test_Vout.cpp
test/testtxref/: CMakeLists.txt  test_Txref.cpp  test_Txref.h  test_TxrefCodec.cpp  test_TxrefCodec_api.cpp  test_Txref_api.cpp  txref_c_api_tests.c
